export const snapshot = {};

snapshot[`Issue Update Command - Help Text 1`] = `
stdout:
"
Usage: update [issueId]

Description:

  Update a linear issue                                                           
                                                                                  
  Linear Markdown: a plain Linear URL creates a mention; \`@name\`, \`@[Name](id)\`,  
  and \`[Name](url)\` do not. Get a person's URL from the \`url\` field of            
  \`linear team members <TEAM> --json\`, or an issue's from \`linear issue url <ID>\`.
  Run \`linear markdown\` for collapsible sections and the full reference.          

Options:

  -h, --help                         - Show this help.                                                                  
  -a, --assignee      <assignee>     - Assign the issue to 'self' or someone (by username or name)                      
  --unassign                         - Clear the issue's assignee (cannot be combined with --assignee)                  
  --due-date          <dueDate>      - Due date of the issue                                                            
  --parent            <parent>       - Parent issue (if any) as a team_number code                                      
  -p, --priority      <priority>     - Priority of the issue (1-4, descending priority)                                 
  --estimate          <estimate>     - Points estimate of the issue                                                     
  -d, --description   <description>  - Description of the issue                                                         
  --description-file  <path>         - Read description from a file (preferred for markdown content)                    
  -l, --label         <label>        - Issue label associated with the issue; replaces the issue's entire label set.    
                                       May be repeated. Use --add-label/--remove-label to change labels incrementally.  
  --add-label         <label>        - Add a label to the issue, keeping its existing labels. May be repeated.          
  --remove-label      <label>        - Remove a label from the issue, keeping its other labels (does not delete the     
                                       label from the team). May be repeated.                                           
  --team              <team>         - Team associated with the issue (if not your default team)                        
  --project           <project>      - Project to assign the issue to (UUID, slug ID, or name)                          
  -s, --state         <state>        - Workflow state for the issue (by name or type)                                   
  --milestone         <milestone>    - Project milestone (UUID, or name when --project is set or the issue already has  
                                       a project)                                                                       
  --cycle             <cycle>        - Cycle name, number, 'active'/'now', 'next', 'previous', or a relative offset     
                                       like +1 (use --cycle=-1 for negatives). Use --clear-cycle to remove the issue    
                                       from its cycle                                                                   
  --clear-cycle                      - Remove the issue from its cycle                                                  
  -t, --title         <title>        - Title of the issue                                                               

"
stderr:
""
`;

snapshot[`Issue Update Command - Happy Path 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Updated authentication bug fix
https://linear.app/test-team/issue/ENG-123/updated-authentication-bug-fix
"
stderr:
""
`;

snapshot[`Issue Update Command - Alphanumeric Team Key 1`] = `
stdout:
"Updating issue PLA4-16916

✓ Updated issue PLA4-16916: Test Issue
https://linear.app/test-team/issue/PLA4-16916/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Case Insensitive Label Matching 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Short Flag -p Is Priority 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Cycle 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Project UUID 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - With Milestone UUID (no --project required) 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Test Issue
https://linear.app/test-team/issue/ENG-123/test-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Unknown State Lists Valid States 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Workflow state not found: 'Nope' for team ENG
  Valid states: \\"In Progress\\" (started), \\"Todo\\" (unstarted), \\"Done\\" (completed). Run \`linear team states ENG\` to list them.
"
`;

snapshot[`Issue Update Command - Unassign Clears Assignee 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Unassign With Other Fields 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Renamed
https://linear.app/test-team/issue/ENG-123/renamed
"
stderr:
""
`;

snapshot[`Issue Update Command - Assignee Still Sends User Id 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Assignee And Unassign Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot specify both --assignee and --unassign
  Use --assignee <user> to set an assignee, or --unassign on its own to clear it.
"
`;

snapshot[`Issue Update Command - Clear Cycle Sends Null 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Next Resolves Via Flag 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Relative Offset 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Cycle Lookup Paginates 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Add Label Sends addedLabelIds 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Add Label Dedupes Case Variants 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Remove Label Sends removedLabelIds 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Add And Remove Label In One Update 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Label Replace Sends Exact labelIds 1`] = `
stdout:
"Updating issue ENG-123

✓ Updated issue ENG-123: Some issue
https://linear.app/test-team/issue/ENG-123/some-issue
"
stderr:
""
`;

snapshot[`Issue Update Command - Label And Add Label Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot combine --label with --add-label or --remove-label
  --label replaces the issue's entire label set. Use it alone to set the exact set, or use --add-label/--remove-label alone to change it incrementally.
"
`;

snapshot[`Issue Update Command - Label And Remove Label Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot combine --label with --add-label or --remove-label
  --label replaces the issue's entire label set. Use it alone to set the exact set, or use --add-label/--remove-label alone to change it incrementally.
"
`;

snapshot[`Issue Update Command - Team Move And Add Label Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot combine --team with --add-label or --remove-label
  Move the issue with --team first, then change labels in a second update.
"
`;

snapshot[`Issue Update Command - Team Move And Remove Label Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot combine --team with --add-label or --remove-label
  Move the issue with --team first, then change labels in a second update.
"
`;

snapshot[`Issue Update Command - Add And Remove Same Label Conflict 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Cannot add and remove the same label in one update
  Remove the duplicate label from either --add-label or --remove-label.
"
`;

snapshot[`Issue Update Command - Unknown Add Label 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Issue label not found: nosuch
  Run \`linear label list --team ENG\` to see available labels.
"
`;

snapshot[`Issue Update Command - Unknown Remove Label 1`] = `
stdout:
""
stderr:
"✗ Failed to update issue: Issue label not found: nosuch
  Run \`linear label list --team ENG\` to see available labels.
"
`;
